k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocks-service
spec:
  selector:
    app: stocks-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
